fixed issue with checkout form overflowing

--- a/css/styles.css
+++ b/css/styles.css
@@ -532,7 +532,7 @@ footer {
 .checkout-page {
   background-color: var(--light-grey);
   padding: 2rem 0;
-  height: 125vh;
+  min-height: 900px;
 }
 
 .checkout-card {
